[gd_scene load_steps=13 format=3 uid="uid://bgvuuvhomj1ox"]

[ext_resource type="Script" uid="uid://b3ywa5gtd7j2q" path="res://scenes/game/game_board_screen.gd" id="1_s826b"]
[ext_resource type="PackedScene" uid="uid://cxjls2n6gleb4" path="res://models/player/goal.tscn" id="3_466yg"]
[ext_resource type="PackedScene" uid="uid://b8eby70l6c6qs" path="res://models/hud/hud_score.tscn" id="3_bgg7l"]
[ext_resource type="PackedScene" uid="uid://rpl4j57m2rt4" path="res://models/hud/hud_energy.tscn" id="4_sbpvv"]
[ext_resource type="FontFile" uid="uid://c70q8gaqjfaug" path="res://assets/fonts/Montserrat/static/Montserrat-Light.ttf" id="6_8rcy1"]
[ext_resource type="Shader" uid="uid://dj75pwobmy0h0" path="res://shaders/menu_backdrop_bg.gdshader" id="6_pqwmj"]
[ext_resource type="PackedScene" uid="uid://dw5wqex1qict1" path="res://models/hud/hud_inventory.tscn" id="6_xugar"]
[ext_resource type="Script" uid="uid://cu500fopvdf0g" path="res://models/menu/menu_backdrop.gd" id="7_3wyat"]
[ext_resource type="PackedScene" uid="uid://cghrjacphgqkh" path="res://models/menu/menu.tscn" id="7_ycrgt"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4dcan"]
size = Vector2(1224, 200)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xet8o"]
size = Vector2(200, 576)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_3wyat"]
shader = ExtResource("6_pqwmj")
shader_parameter/mip_level = 4.0
shader_parameter/color_mul = 0.6
shader_parameter/color_add = 0.4
shader_parameter/rounded_corner_top_left = true
shader_parameter/rounded_corner_top_right = true
shader_parameter/rounded_corner_bottom_left = true
shader_parameter/rounded_corner_bottom_right = true
shader_parameter/corner_radius = 0.05

[node name="PlayGame" type="Node2D"]
script = ExtResource("1_s826b")

[node name="Board" type="Node2D" parent="."]

[node name="Outer Fence" type="RigidBody2D" parent="Board"]
gravity_scale = 0.0
freeze = true

[node name="Top" type="CollisionShape2D" parent="Board/Outer Fence"]
position = Vector2(512, -100)
shape = SubResource("RectangleShape2D_4dcan")

[node name="Bottom" type="CollisionShape2D" parent="Board/Outer Fence"]
position = Vector2(512, 676)
shape = SubResource("RectangleShape2D_4dcan")

[node name="Left" type="CollisionShape2D" parent="Board/Outer Fence"]
position = Vector2(-36, 288)
shape = SubResource("RectangleShape2D_xet8o")

[node name="Right" type="CollisionShape2D" parent="Board/Outer Fence"]
position = Vector2(1060, 288)
shape = SubResource("RectangleShape2D_xet8o")

[node name="RoundTopLeft" type="CollisionPolygon2D" parent="Board/Outer Fence"]
position = Vector2(64, 0)
polygon = PackedVector2Array(0, 53, 2, 40, 7, 27, 15, 16, 27, 7, 39, 2, 53, 0, 0, 0)

[node name="RoundTopRight" type="CollisionPolygon2D" parent="Board/Outer Fence"]
position = Vector2(960, 0)
rotation = 1.57079
polygon = PackedVector2Array(0, 53, 2, 40, 7, 27, 15, 16, 27, 7, 39, 2, 53, 0, 0, 0)

[node name="RoundBottomRight" type="CollisionPolygon2D" parent="Board/Outer Fence"]
position = Vector2(960, 576)
rotation = 3.14159
polygon = PackedVector2Array(0, 53, 2, 40, 7, 27, 15, 16, 27, 7, 39, 2, 53, 0, 0, 0)

[node name="RoundBottomLeft" type="CollisionPolygon2D" parent="Board/Outer Fence"]
position = Vector2(64, 576)
rotation = 4.71238
polygon = PackedVector2Array(0, 53, 2, 40, 7, 27, 15, 16, 27, 7, 39, 2, 53, 0, 0, 0)

[node name="GoalPlayer1" parent="Board" instance=ExtResource("3_466yg")]
z_index = -1
position = Vector2(512, -30)
player_num = 1

[node name="GoalPlayer2" parent="Board" instance=ExtResource("3_466yg")]
z_index = -1
position = Vector2(512, 606)
player_num = 2

[node name="HudPlayer1" type="Node2D" parent="Board"]
light_mask = 2
z_index = 1

[node name="ScoreP1" parent="Board/HudPlayer1" instance=ExtResource("3_bgg7l")]
light_mask = 2
position = Vector2(31, 288)
rotation = 1.5708
player_num = 1

[node name="EnergyP1" parent="Board/HudPlayer1" instance=ExtResource("4_sbpvv")]
light_mask = 2
position = Vector2(31, 388)
rotation = 1.5708
player_num = 1

[node name="InventoryP1" parent="Board/HudPlayer1" instance=ExtResource("6_xugar")]
position = Vector2(31, 88)
rotation = 1.5708
player_num = 1

[node name="HudPlayer2" type="Node2D" parent="Board"]
light_mask = 2
z_index = 1

[node name="ScoreP2" parent="Board/HudPlayer2" instance=ExtResource("3_bgg7l")]
light_mask = 2
position = Vector2(993, 288)
rotation = -1.5708
player_num = 2

[node name="EnergyP2" parent="Board/HudPlayer2" instance=ExtResource("4_sbpvv")]
light_mask = 2
position = Vector2(993, 188)
rotation = -1.5708
player_num = 2

[node name="InventoryP2" parent="Board/HudPlayer2" instance=ExtResource("6_xugar")]
position = Vector2(993, 488)
rotation = -1.5708
player_num = 2

[node name="ShowBoardEdges" type="Node2D" parent="Board"]
light_mask = 2

[node name="RoundTopLeft" type="Polygon2D" parent="Board/ShowBoardEdges"]
light_mask = 2
position = Vector2(64, 0)
color = Color(0.2, 0.2, 0.2, 1)
polygon = PackedVector2Array(53, 0, 39, 2, 27, 7, 15, 16, 7, 27, 2, 40, 0, 53, 0, 0)

[node name="RoundTopRight" type="Polygon2D" parent="Board/ShowBoardEdges"]
light_mask = 2
position = Vector2(960, 0)
rotation = 1.57079
color = Color(0.2, 0.2, 0.2, 1)
polygon = PackedVector2Array(53, 0, 39, 2, 27, 7, 15, 16, 7, 27, 2, 40, 0, 53, 0, 0)

[node name="RoundBottomRight" type="Polygon2D" parent="Board/ShowBoardEdges"]
light_mask = 2
position = Vector2(960, 576)
rotation = -3.14159
color = Color(0.2, 0.2, 0.2, 1)
polygon = PackedVector2Array(53, 0, 39, 2, 27, 7, 15, 16, 7, 27, 2, 40, 0, 53, 0, 0)

[node name="RoundBottomLeft" type="Polygon2D" parent="Board/ShowBoardEdges"]
light_mask = 2
position = Vector2(64, 576)
rotation = -1.57079
color = Color(0.2, 0.2, 0.2, 1)
polygon = PackedVector2Array(53, 0, 39, 2, 27, 7, 15, 16, 7, 27, 2, 40, 0, 53, 0, 0)

[node name="Top" type="ColorRect" parent="Board/ShowBoardEdges"]
light_mask = 2
offset_left = -174.0
offset_top = -268.0
offset_right = 1184.0
color = Color(0.2, 0.2, 0.2, 1)

[node name="Bottom" type="ColorRect" parent="Board/ShowBoardEdges"]
light_mask = 2
offset_left = -155.0
offset_top = 576.0
offset_right = 1203.0
offset_bottom = 844.0
color = Color(0.2, 0.2, 0.2, 1)

[node name="Left" type="ColorRect" parent="Board/ShowBoardEdges"]
light_mask = 2
offset_left = -160.0
offset_right = 64.0
offset_bottom = 576.0
color = Color(0.2, 0.2, 0.2, 1)

[node name="Right" type="ColorRect" parent="Board/ShowBoardEdges"]
light_mask = 2
offset_left = 960.0
offset_right = 1183.0
offset_bottom = 576.0
color = Color(0.2, 0.2, 0.2, 1)

[node name="PauseMenuContainer" type="Control" parent="Board"]
z_index = 800
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Board/PauseMenuContainer"]
z_index = 801
material = SubResource("ShaderMaterial_3wyat")
layout_mode = 0
offset_left = 258.0
offset_top = 147.0
offset_right = 759.0
offset_bottom = 420.0
color = Color(0.223529, 0.223529, 0.223529, 1)
script = ExtResource("7_3wyat")

[node name="PauseMenu" parent="Board/PauseMenuContainer" instance=ExtResource("7_ycrgt")]
z_index = 802
layout_mode = 1
offset_left = 519.0
offset_top = 275.0
offset_right = 519.0
offset_bottom = 275.0
item_font_size = 30
item_small_font_size = 20
selected_font_size_ratio = 1.0
title_font_size = 20
default_color = Color(0.533037, 0.533037, 0.533037, 1)
title_color = Color(0.724643, 0.724643, 0.724643, 1)
menu_width = 700
label_h_align = 0

[node name="DebugText" type="RichTextLabel" parent="Board"]
visible = false
z_index = 1000
offset_right = 1025.0
offset_bottom = 65.0
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_fonts/normal_font = ExtResource("6_8rcy1")
theme_override_font_sizes/normal_font_size = 15
text = "DEBUG TEXT"

[node name="Background" type="ColorRect" parent="Board"]
z_index = -100
offset_right = 1024.0
offset_bottom = 576.0
color = Color(0.05, 0.05, 0.05, 1)
